--- a/publican/templates/toc.tmpl
+++ b/publican/templates/toc.tmpl
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" href="../interactive.css" type="text/css" />
+	<link rel="stylesheet" href="../menu.css" type="text/css" />
 	<script type="text/javascript" src="../toc.js"></script>
 	<title>[% toc_nav %]</title>
 </head>
