make RTL website better

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -1267,6 +1267,12 @@ ul li p:last-child, ul li para:last-child {
 	padding-bottom:2em;
 	padding-top:1em;
 	border-top:1px dotted #ccc;
+        background-color: rgba(240, 240, 240, 0.9);
+        height:2.5em;
+        line-height:2.5em;
+-webkitbox-shadow: 0px .15em .5em rgba(0,0,0,0.2);
+  -moz-box-shadow: 0px .15em .5em rgba(0,0,0,0.2);
+       box-shadow: 0px .15em .5em rgba(0,0,0,0.2);
 }
 
 .docnav li {
@@ -1311,14 +1317,14 @@ ul li p:last-child, ul li para:last-child {
 }
 
 .docnav li.next a strong {
-	background:  url(../images/stock-go-forward.png) top right no-repeat;
+	background:  url(../images/stock-go-forward.png) 120% right no-repeat;
 	padding-top:3px;
 	padding-bottom:4px;
 	padding-right:28px;
 }
 
 .docnav li.previous a strong {
-	background: url(../images/stock-go-back.png) top left no-repeat;
+	background: url(../images/stock-go-back.png) 120% left no-repeat;
 	padding-top:3px;
 	padding-bottom:4px;
 	padding-left:28px;
