--- a/publican/datadir/Common_Content/common/en-US/css/menu.css
+++ b/publican/datadir/Common_Content/common/en-US/css/menu.css
@@ -1392,14 +1392,14 @@ div.toc > dl > dt {
 }
 
 .docnav li.next a strong {
-	background:  url(../images/stock-go-forward.png) top right no-repeat;
+	background:  url(../images/stock-go-forward.png) right 120% no-repeat;
 	padding-top:3px;
 	padding-bottom:4px;
 	padding-right:28px;
 }
 
 .docnav li.previous a strong {
-	background: url(../images/stock-go-back.png) top left no-repeat;
+	background: url(../images/stock-go-back.png) left 120% no-repeat;
 	padding-top:3px;
 	padding-bottom:4px;
 	padding-left:28px;
@@ -1469,6 +1469,12 @@ ul.docnav {
 	position: fixed;
 	width:100%;
 	border-top:1px dotted #ccc;
+        background-color: rgba(240, 240, 240, 0.9);
+        height:2.5em;
+        line-height:2.5em;
+-webkitbox-shadow: 0px .15em .5em rgba(0,0,0,0.2);
+  -moz-box-shadow: 0px .15em .5em rgba(0,0,0,0.2);
+       box-shadow: 0px .15em .5em rgba(0,0,0,0.2);
 }
 
 .toc_embeded > ul.docnav {
