--- a/publican/datadir/Common_Content/common/he-IL/css/menu.css
+++ b/publican/datadir/Common_Content/common/he-IL/css/menu.css
@@ -223,12 +223,12 @@ dt .inlinemediaobject, dt object {
 }
 
 .docnav li.next a strong {
-	background:  url(../images/stock-go-back.png) top left no-repeat;
+	background:  url(../images/stock-go-back.png) left 120% no-repeat;
 	padding-left:28px;
 }
 
 .docnav li.previous a strong {
-	background: url(../images/stock-go-forward.png) top right no-repeat;
+	background: url(../images/stock-go-forward.png) right 120% no-repeat;
 	padding-right:28px;
 	padding-left:0.5em;
 }
