--- a/publican/templates/web_2_head.tmpl
+++ b/publican/templates/web_2_head.tmpl
@@ -15,7 +15,7 @@
 <script type="text/javascript" src="[% host %]/toc.js"></script>
 <script type="text/javascript" src="[% host %]/jquery-1.7.1.min.js"></script>
 </head>
-<body class="menu">
+<body class="menu" [%- IF lang.match('(?:he-IL|fa-IR|ar-SA)') %] dir="rtl"[% END %]>
 <div id="wrapper">
 	<div id="menu">
 		<div id="lang_menu" class="breadcrumb">
