--- a/publican/datadir/Common_Content/common/fa-IR/css/menu.css
+++ b/publican/datadir/Common_Content/common/fa-IR/css/menu.css
@@ -52,7 +52,6 @@ div.longdesc-link {
 }
 
 .producttitle {
-	background: #336699 url(../images/h1-bg.png) top right repeat;
 }
 .section h1.title {
 	text-align: right;
@@ -224,12 +223,12 @@ dt .inlinemediaobject, dt object {
 }
 
 .docnav li.next a strong {
-	background:  url(../images/stock-go-back.png) top left no-repeat;
+	background:  url(../images/stock-go-back.png) left 120% no-repeat;
 	padding-left:28px;
 }
 
 .docnav li.previous a strong {
-	background: url(../images/stock-go-forward.png) top right no-repeat;
+	background: url(../images/stock-go-forward.png) right 120% no-repeat;
 	padding-right:28px;
 	padding-left:0.5em;
 }
