--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -21,18 +21,35 @@ body.toc_embeded {
 	margin: 0 auto;
 }
 
+body[dir="rtl"].toc_embeded {
+	/*for web hosting system only*/
+	padding: 0em 100px 0px 300px;
+}
+
 body.notoc {
-margin-left:3em;
+	margin-left:3em;
 	padding-left: 0px;
+}
+
+body[dir="rtl"].notoc {
+	margin-right:3em;
+	padding-right: 0px;
 }
 
 a:focus {
     outline: medium none;
 }
-body > div.book, body > div.article, body > div.set, body > div.preface, body > div.chapter, body > div.section, body > div.appendix, body > div.part {
+body > div.book,
+body > div.article,
+body > div.set,
+body > div.preface,
+body > div.chapter,
+body > div.section,
+body > div.appendix,
+body > div.part {
     margin-left: auto;
     margin-right: auto;
-    max-width: 55em;
+    max-width: 45em;
     margin-top: 40px;
     margin-bottom:4em;
 /*
@@ -48,6 +65,19 @@ body > div.book, body > div.article, body > div.set, body > div.preface, body > 
     padding-left: 30px;
     padding-right: 40px;
     padding-bottom: 20px;
+    padding-top: 1px;
+}
+
+body[dir="rtl"] > div.book,
+body[dir="rtl"] > div.article,
+body[dir="rtl"] > div.set,
+body[dir="rtl"] > div.preface,
+body[dir="rtl"] > div.chapter,
+body[dir="rtl"] > div.section,
+body[dir="rtl"] > div.appendix,
+body[dir="rtl"] > div.part {
+    padding-right: 30px;
+    padding-left: 40px;
 }
 
 body.toc_embeded > div.book,
@@ -82,7 +112,14 @@ body.toc_embeded > div.part {
     padding-top: 20px;
     position: relative;
     top: 0;
+    padding-right: 30px;
 }
+
+body[dir="rtl"] .lang_bottom_box {
+    margin-left: 0px !important;
+    margin-right: 25% !important;
+}
+
 .lang_bottom_box:after, .product_bottom_box:after {
     clear: both !important;
     content: "";
@@ -95,8 +132,13 @@ body.toc_embeded > div.part {
     float: left;
     padding-top: 20px;
     position: relative;
-    width: 22.6%;
+    width: 240px;
 }
+
+body[dir="rtl"] .side_products {
+    float: right;
+}
+
 .side_products:after {
     clear: both;
     content: " ";
@@ -113,6 +155,12 @@ body.toc_embeded > div.part {
     text-decoration: none;
     padding-left: 25px;
 }
+
+body[dir="rtl"] .side_products div.link a {
+    padding-left: 0px;
+    padding-right: 25px;
+}
+
 .side_products div.link a.active {
     background-color: #333333;
     color: #EEEEEE;
@@ -136,6 +184,12 @@ body.toc_embeded > div.part {
     width: 0;
     z-index: 999;
 }
+
+body[dir="rtl"] .side_products div.link a.active:after {
+    border-color: transparent #333 transparent transparent;
+    border-width: 1em 1em 1em 0em !important;
+}
+
 .main_content {
 /*    background-color: #F5F5F5; */
     clear: both !important;
@@ -178,18 +232,13 @@ body.toc_embeded > div.part {
     position: relative;
     width: 100%;
 }
+
+body[dir="rtl"] .menu .bottom_versions .title span {
+    right: -20px;
+}
+
 .menu span a, #menu span a {
     color: white;
-}
-.bottom_books {
-    display: block;
-    float: left;
-    font-size: 12px;
-    margin-bottom: 0.5em;
-    margin-left: 20px;
-    margin-right: 10px;
-    max-width: 50%;
-    min-width: 50%;
 }
 
 .product_bottom_box {
@@ -239,6 +288,11 @@ body.toc_embeded > div.part {
     margin: 0;
     width: 45%;
 }
+
+body[dir="rtl"] .book_versions {
+    float: right;
+}
+
 .book_version {
     background-color: #A3A3A3;
     float: left;
@@ -247,6 +301,11 @@ body.toc_embeded > div.part {
     text-align: center;
     width: 50%;
 }
+
+body[dir="rtl"] .book_version {
+    float: right;
+}
+ 
 .book_formats {
     background-color: #111111;
     float: right;
@@ -254,6 +313,11 @@ body.toc_embeded > div.part {
     padding: 20px;
     width: 100px;
 }
+
+body[dir="rtl"] .book_formats {
+    float: left;
+}
+
 .book_formats div {
     margin-bottom: 20px;
 }
@@ -272,12 +336,21 @@ body.toc_embeded > div.part {
     top: 0;
     width: 100%;
 }
+
+body[dir="rtl"] #menu {
+    right: 0;
+}
+
 #menu ul {
     list-style: none outside none !important;
     margin: 0px;
     padding: 0px;
     min-width: 100%;
-    padding-left: 5px;
+}
+
+#menu ul li {
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 #menu a {
@@ -304,12 +377,11 @@ body.toc_embeded > div.part {
     width: 50px;
     z-index: 9;
 }
-#lang_menu img {
-    float: left;
-    height: 30px;
-    margin: 0;
-    width: 50px;
+
+body[dir="rtl"] #langauge_menu {
+    right: 0;
 }
+
 #product_menu {
     display: inline-block;
     z-index: 19;
@@ -350,6 +422,17 @@ body.toc_embeded > div.part {
     right: 240px;
     z-index: 19;
 }
+
+body[dir="rtl"] #book_lang_menu,
+body[dir="rtl"] #lang_menu_2,
+body[dir="rtl"] #book_format_menu {
+    float: left;
+    padding-left: 10px;
+    padding-right: 0px;
+    right: auto;
+    left: 240px;
+}
+
 #lang_menu_2:before,
 #book_format_menu:before,
 #book_lang_menu:before {
@@ -359,12 +442,17 @@ body.toc_embeded > div.part {
     content: "";
     display: block;
     height: 0;
-    margin-left: 1em;
-    margin-top: 0.75em;
     position: absolute;
     right: 6px;
-    top: 3px;
+    top: 11px;
     width: 0;
+}
+
+body[dir="rtl"] #lang_menu_2:before,
+body[dir="rtl"] #book_format_menu:before,
+body[dir="rtl"] #book_lang_menu:before {
+    right: auto;
+    left: 6px;
 }
 
 #lang_menu_2 div,
@@ -376,6 +464,13 @@ body.toc_embeded > div.part {
     padding: 0px;
     padding-left:10px;
     padding-right:20px;
+}
+
+body[dir="rtl"] #lang_menu_2 div,
+body[dir="rtl"] #book_format_menu div,
+body[dir="rtl"] #book_lang_menu div {
+    padding-right:10px;
+    padding-left:20px;
 }
 
 #book_lang_menu_list, #lang_menu_list, #book_format_menu_list {
@@ -401,11 +496,11 @@ body.toc_embeded > div.part {
     padding-right: 5px !important;
 }
 
-#search_box {
-    background-color: grey;
-    position: absolute;
-    right: 40px;
-    z-index: 9;
+body[dir="rtl"] .untranslated span {
+    margin-left: 0px;
+    margin-right: 10px;
+    padding-left: 5px !important;
+    padding-right: 0px !important;
 }
 
 .hidden {
@@ -426,6 +521,11 @@ body.toc_embeded > div.part {
    -moz-box-shadow: 0 0 2px white;
         box-shadow: 0 0 2px white;
 }
+
+body[dir="rtl"] .version_tabs .link {
+    float: left;
+}
+
 .version_tabs .link a {
     background-color: #666666;
     display: block;
@@ -444,6 +544,13 @@ body.toc_embeded > div.part {
     width: 0;
     z-index: 999;
 }
+
+body[dir="rtl"] .version_tabs .link a.active:before {
+    right: 50%;
+    margin-right: -10px;
+    margin-left: 0px;
+}
+
 .version_tabs .link:last-child:after {
     clear: both;
     content: "";
@@ -472,6 +579,13 @@ body > #wrapper {
    -moz-box-shadow: 0 0 0 1px #AAAAAA, 0 0 5px 0 #AAAAAA;
         box-shadow: 0 0 0 1px #AAAAAA, 0 0 5px 0 #AAAAAA;
 }
+
+body[dir="rtl"] > #wrapper {
+-webkit-box-shadow: 0 1px 0 0 #AAAAAA, 0 0 5px 0 #AAAAAA;
+   -moz-box-shadow: 0 1px 0 0 #AAAAAA, 0 0 5px 0 #AAAAAA;
+        box-shadow: 0 1px 0 0 #AAAAAA, 0 0 5px 0 #AAAAAA;
+}
+
 .langauge_banner {
     color: #FFFFFF;
     height: 16em;
@@ -494,17 +608,18 @@ body > #wrapper {
 .bottom_products > .title a:hover {
     color: #333333 !important;
 }
-.bottom_versions {
-    line-height: 1.3em;
-    padding-left: 1em;
-    position: relative;
-}
+
 .bottom_versions > .title a {
     color: #666666 !important;
     font-size: 2em;
     padding-left: 0.5em;
     text-decoration: none;
 }
+
+body[dir="rtl"] .bottom_versions > .title a {
+    padding-right: 0.5em;
+}
+
 #book_lang_menu,
 #menu,
 .breadcrumb,
@@ -518,8 +633,14 @@ body > #wrapper {
    -moz-box-shadow: 0 -1px 8px #888888, 0 -30px 30px -20px #CCCCCC inset;
         box-shadow: 0 -1px 8px #888888, 0 -30px 30px -20px #CCCCCC inset;
     background-color:#EEEEEE;
-
 }
+
+body[dir="rtl"] #menu {
+-webkit-box-shadow: 0 -1px 8px #888888, 0 -20px 30px -30px #CCCCCC inset;
+   -moz-box-shadow: 0 -1px 8px #888888, 0 -20px 30px -30px #CCCCCC inset;
+        box-shadow: 0 -1px 8px #888888, 0 -20px 30px -30px #CCCCCC inset;
+}
+
 .breadcrumb {
     background-color: #EEEEEE;
     color: #444444;
@@ -530,6 +651,11 @@ body > #wrapper {
     position: relative;
     text-indent: 32px;
 }
+
+body[dir="rtl"] .breadcrumb {
+    float: right;
+}
+
 .breadcrumb:before {
     border-color: transparent transparent transparent rgba(0, 0, 0, 0.2);
     border-style: solid;
@@ -543,6 +669,14 @@ body > #wrapper {
     width: 0;
     z-index: 99;
 }
+
+body[dir="rtl"] .breadcrumb:before {
+    border-color: transparent rgba(0, 0, 0, 0.2) transparent transparent;
+    border-width: 16px 16px 16px 0;
+    right: auto;
+    left: -16px;
+}
+
 .breadcrumb:after {
     border-color: transparent transparent transparent #EEEEEE;
     border-style: solid;
@@ -556,6 +690,14 @@ body > #wrapper {
     width: 0;
     z-index: 99;
 }
+
+body[dir="rtl"] .breadcrumb:after {
+    border-color: transparent #EEEEEE transparent transparent;
+    border-width: 16px 16px 16px 0;
+    right: auto;
+    left: -15px;
+}
+
 .breadcrumb:hover {
     background-color: #666666 !important;
     color: #FFFFFF;
@@ -563,6 +705,12 @@ body > #wrapper {
 .breadcrumb:hover:after {
     border-color: transparent transparent transparent #666666;
 }
+
+body[dir="rtl"] .breadcrumb:hover:after {
+    border-color: transparent #666666 transparent transparent;
+}
+
+
 #book_menu, #product_menu, #version_menu {
 }
 #book_lang_menu,
@@ -589,7 +737,16 @@ body > #wrapper {
     background-color: transparent;
     padding: 0;
     width: 190px;
+    position: absolute;
+    right: 40px;
+    z-index: 9;
 }
+
+body[dir="rtl"] #search_box {
+    right: auto;
+    left: 40px;
+}
+
 
 #search_box input[type="text"] {
     background-color: #FFFFFF;
@@ -601,6 +758,11 @@ body > #wrapper {
     min-width: 16em;
     padding: 0;
 }
+
+#search_box input[type="text"] {
+    float: right;
+}
+
 #search_box input[type="submit"] {
     display: none;
 }
@@ -635,6 +797,11 @@ body > #wrapper .book_top_box {
     text-align: center;
     width: 100% !important;
 }
+
+body[dir="rtl"] .book_formats {
+    padding: 0 0 0 1em;
+}
+
 .book_formats div {
     display: inline;
     position: relative !important;
@@ -651,6 +818,11 @@ body > #wrapper .book_top_box {
     text-decoration: none;
     width: 12.5555%;
 }
+
+body[dir="rtl"] .book_formats div a {
+    float: left;
+}
+
 .book_versions {
     border-bottom: 1px solid #CCCCCC;
     float: none;
@@ -684,6 +856,12 @@ body > #wrapper .book_top_box {
     top: 0;
     text-indent: 16px;
 }
+
+body[dir="rtl"] .breadcrumb ul {
+    left: auto;
+    right: 0;
+}
+
 .breadcrumb ul li {
     margin: 0;
     padding: 0;
@@ -695,6 +873,12 @@ body > #wrapper .book_top_box {
     text-decoration: none;
     padding-right: 16px;
 }
+
+body[dir="rtl"] .breadcrumb ul a {
+    padding-right: 0px;
+    padding-left: 16px;
+}
+
 .breadcrumb ul a:hover {
     background-color: #333333;
 }
@@ -703,16 +887,33 @@ body > #wrapper .book_top_box {
     padding: 0 !important;
 }
 .bottom_books {
+    display: block;
+    float: left;
+    font-size: 12px;
+    margin-bottom: 0.5em;
+    margin-left: 20px;
+    margin-right: 10px;
+    max-width: 50%;
+    min-width: 50%;
     display: inline;
     margin: 0;
     padding: 0;
 -webkit-box-sizing: border-box !important;
    -moz-box-sizing: border-box !important;
         box-sizing: border-box !important;
-    height: 60px;
+    height: 68px;
     padding-right:2em;
     overflow: hidden;
 }
+
+body[dir="rtl"] .bottom_books {
+    float: right;
+    margin-right: 0px;
+    margin-left: 0px;
+    padding-right: 0px;
+    padding-left: 2em;
+}
+
 .bottom_books a {
     color: #333333;
     display: block;
@@ -724,6 +925,10 @@ body > #wrapper .book_top_box {
     text-decoration: none !important;
     z-index: 6;
     padding-right: 1px;
+}
+
+body[dir="rtl"] .bottom_books a {
+    padding-left: 1px;
 }
 
 .bottom_books .subtitle {
@@ -788,6 +993,12 @@ div.version_tabs {
     border-width: 16px !important;
     right: -31px !important;
 }
+
+body[dir="rtl"] .side_products div.link a:after {
+    right: auto !important;
+    left: -12px !important;
+}
+
 #slider {
     display: block;
     height: 100%;
@@ -969,6 +1180,15 @@ div.version_tabs {
     padding: 40px !important;
     padding-top: 10px !important;
     min-width: 80%;
+    line-height: 1.3em;
+    padding-left: 1em;
+    position: relative;
+}
+
+body[dir="rtl"] .bottom_versions {
+    padding: 40px !important;
+    padding-top: 10px !important;
+    float: right;
 }
 
 .product_bottom_box .bottom_versions {
@@ -982,7 +1202,18 @@ div.version_tabs {
     width: 100%;
 }
 
+body[dir="rtl"] .footer {
+    float: right;
+}
+
 .menu_embeded #title.hidden {
     display: none;
+}
+
+p, div.para, div.formalpara {
+    margin-bottom: 1em;
+    margin-top: 0.3em;
+    padding-bottom: 0;
+    padding-top: 0;
 }
 
