fix search box witdh in webkit

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -760,7 +760,7 @@ body[dir="rtl"] #search_box {
     float: left;
     height: 26px;
     margin: 2px 3px !important;
-    min-width: 16em;
+    width: 190px;
     padding: 0;
 }
 
@@ -1087,7 +1087,7 @@ body[dir="rtl"] .side_products div.link a:after {
     margin-left: 0;
 }
 .jcarousel-direction-rtl .jcarousel-item-horizontal {
-    margin-left: 10px;
+/*    margin-left: 10px; */
     margin-right: 0;
 }
 .jcarousel-item-vertical {
@@ -1121,7 +1121,7 @@ body[dir="rtl"] .side_products div.link a:after {
     width: 0;
 }
 .jcarousel-direction-rtl .jcarousel-next-horizontal {
-    left: 5px;
+    left: -32px;
     right: auto;
 }
 .jcarousel-next-horizontal:hover, .jcarousel-next-horizontal:focus {
@@ -1161,7 +1161,7 @@ body[dir="rtl"] .side_products div.link a:after {
 }
 .jcarousel-direction-rtl .jcarousel-prev-horizontal {
     left: auto;
-    right: 5px;
+    right: -32px;
 }
 .jcarousel-prev-horizontal:hover, .jcarousel-prev-horizontal:focus {
     opacity: 1 !important;
