fix add_revision removing DTD from Revision History file.

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -1318,14 +1318,14 @@ ul li p:last-child, ul li para:last-child {
 }
 
 .docnav li.next a strong {
-	background:  url(../images/stock-go-forward.png) 120% right no-repeat;
+	background:  url(../images/stock-go-forward.png) right 120% no-repeat;
 	padding-top:3px;
 	padding-bottom:4px;
 	padding-right:28px;
 }
 
 .docnav li.previous a strong {
-	background: url(../images/stock-go-back.png) 120% left no-repeat;
+	background: url(../images/stock-go-back.png) left 120% no-repeat;
 	padding-top:3px;
 	padding-bottom:4px;
 	padding-left:28px;
@@ -1620,5 +1620,5 @@ div.toc > dl > dt {
 	list-style-type: upper-alpha;
 }
 .task {
-/*	page-break-inside: avoid; /*
+/*	page-break-inside: avoid; */
 }
