fix false positives in print_unused BZ #740417

--- a/publican/templates/language_index_style_1.tmpl
+++ b/publican/templates/language_index_style_1.tmpl
@@ -1,5 +1,5 @@
 [% INCLUDE 'web_2_head.tmpl' %]
-<script>
+<script type="text/javascript">
 $(document).ready(function() {
 	$('body').load("[% host %]/[% lang %]/splash.html");
 	$('body').addClass('toc_embeded');
