--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -1222,3 +1222,255 @@ p, div.para, div.formalpara {
     padding-top: 0;
 }
 
+
+
+/*    *****    */
+
+
+body, html{ height: 100%;} /*needed for the hover stuff*/
+
+/*selection fixing - now they press ctrl+a and only the document contents are selectable*/
+body {
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+body > div.book,body > div.article,body > div.set,body > div.preface,body > div.chapter,body > div.section,body > div.appendix,body > div.part {
+	margin-top: 100px;
+	-webkit-user-select: text;
+	-moz-user-select: text;
+	-ms-user-select: text;
+	user-select: text;
+	-webkit-box-shadow: 0 .5em 5em #ccc;
+	box-shadow: 0 .5em 5em #ccc;
+	padding: 6em;
+}
+
+/*
+putting the doc nav away from the site nav
+ */
+/*give the docnav no gradient background and a nicer shadow */
+#menu {
+	-webkit-box-shadow: none;
+	box-shadow: none;
+	border-bottom: 1px solid #ccc; /*and a nice border bottom*/
+}
+
+/*setting the docnav at the bottom with a dark background */
+.docnav {
+	bottom: 0px;
+	margin-bottom: 0em;
+	background-color: rgba(1,1,1,0.75);
+	color: #fff;
+	width: 90%;
+	left: 5%;
+
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+	border-radius: .5em .5em 0 0;
+	padding-top: .26em;
+}
+
+/*fancy docnav animation*/
+.docnav {
+	z-index: 99;
+	bottom: -3em;
+	margin-bottom: 0 !important;
+
+	-webkit-transition: all .25s ease;
+	-moz-transition: all .25s ease;
+	-o-transition: all .25s ease;
+	-ms-transition: all .25s ease;
+	transition: all .25s ease;
+}
+
+body:hover .docnav {
+	bottom: 0px;
+}
+
+/*making the text white */
+.docnav li.next a strong,.docnav li.previous a strong,.docnav .home {
+	color: #999;
+}
+
+.docnav li.next a strong:hover,.docnav li.previous a strong:hover,.docnav .home:hover {
+	color: #fff;
+}
+
+/*making the docnav  next prev buttons spacier */
+.docnav li.next a strong,.docnav li.previous a strong {
+	padding: .3em 4em;
+	line-height: 2em;
+}
+
+.docnav li.next a strong {
+	background-position: 90% 90%;
+}
+
+.docnav li.previous a strong {
+	background-position: 10% 90%;
+}
+
+#book_lang_menu,#lang_menu_2,#book_format_menu {
+	border: none !important;
+	background-color: transparent;
+}
+
+/*fixing the docnav arrow*/
+.home {
+	padding: .5em !important;
+}
+
+.home::after {
+	top: 0.8em;
+	border-width: 0em .5em .5em .5em;
+	border-color: transparent transparent #999 transparent;
+}
+
+/*tightening up the breadcrumb*/
+.breadcrumb {
+	text-indent: 1em;
+}
+
+/*tightening up the language and formats positioning*/
+#book_lang_menu,#lang_menu_2,#book_format_menu {
+	right: 140px;
+	z-index: 0;
+}
+
+/*awesome animated text box*/
+#search_box,#search_box input[type="text"] {
+	width: 90px;
+
+	-webkit-transition: all .25s ease;
+	-moz-transition: all .25s ease;
+	-o-transition: all .25s ease;
+	-ms-transition: all .25s ease;
+	transition: all .25s ease;
+	text-indent: .5em;
+}
+
+#search_box input[type="text"]:focus,#search_box input[type="text"]:hover {
+	width: 320px;
+}
+
+/*fixing up the floating toc*/
+/*animation*/
+#floatingtoc a {
+	color: #fff;
+}
+
+#floatingtoc dd a {
+	color: #ccc;
+}
+
+#floatingtoc {
+	border: none;
+	padding: 5em 0em;
+	bottom: 0px;
+
+	-webkit-transition: all .2s ease;
+	-moz-transition: all .2s ease;
+	-o-transition: all .2s ease;
+	-ms-transition: all .2s ease;
+	transition: all .2s ease;
+	background-color: #fff;
+	background-color: rgba(255,255,255,0.86);
+	max-height: none;
+	top: 0px;
+	width: 100%;
+	margin: 0em;
+	left: 0em;
+}
+
+#floatingtoc .toc {
+	overflow: auto;
+	max-width: 500px;
+	padding: 2em;
+
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 0 auto;
+	background-color: #333;
+	background-color: rgba(10,10,10,0.83);
+	border-radius: .51em .51em 0em 0em;
+	position: fixed;
+	top: 50px;
+	bottom: 40px;
+	left: 50%;
+	margin-left: -250px !important;
+}
+
+#floatingtoc .toc {
+	bottom: 0px;
+
+	-webkit-transition: all .2s ease;
+	-moz-transition: all .2s ease;
+	-o-transition: all .2s ease;
+	-ms-transition: all .2s ease;
+	transition: all .2s ease;
+}
+
+body:hover #floatingtoc .toc {
+	bottom: 40px;
+
+	-webkit-transition: all .2s ease;
+	-moz-transition: all .2s ease;
+	-o-transition: all .2s ease;
+	-ms-transition: all .2s ease;
+	transition: all .2s ease;
+}
+
+#floatingtoc .toc:after {
+	-webkit-transition: all .2s ease;
+	-moz-transition: all .2s ease;
+	-o-transition: all .2s ease;
+	-ms-transition: all .2s ease;
+	transition: all .2s ease;
+	content: "";
+	display: block;
+	width: 0;
+	height: 0;
+	border-width: .5em;
+	border-color: transparent transparent #fff transparent;
+	border-style: solid;
+	z-index: 99;
+	position: fixed;
+	bottom: 0px;
+	left: 50%;
+	margin-left: -.25em;
+}
+
+body:hover #floatingtoc .toc:after {
+	bottom: 39px;
+
+	-webkit-transition: all .2s ease;
+	-moz-transition: all .2s ease;
+	-o-transition: all .2s ease;
+	-ms-transition: all .2s ease;
+	transition: all .2s ease;
+}
+
+#menu ul li {
+	margin-left: 0;
+	margin-right: 0;
+	text-indent: 25px;
+}
+
+#menu ul a {
+	color: #ddd;
+}
+
+#menu ul a:hover {
+	background-color: #666;
+	color: #FFF !important;
+}
+
+
+
