fix layout issues with floating toc clean up loading floating toc add draft mode to PUG update CLI PO files

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -17,13 +17,13 @@ body.menu_embeded {
 
 body.toc_embeded {
 	/*for web hosting system only*/
-	padding: 0em 100px 0px 300px;
+	padding: 0em 100px 0px 380px;
 	margin: 0 auto;
 }
 
 body[dir="rtl"].toc_embeded {
 	/*for web hosting system only*/
-	padding: 0em 100px 0px 300px;
+	padding: 0em 100px 0px 380px;
 }
 
 body.notoc {
@@ -1585,5 +1585,17 @@ body.toc_embeded p#title {
 	margin-top: 55px;
 }
 
+.draft .book {
+	background-image: url(en-US/images/watermark-draft.png);
+	background-repeat: repeat-y;
+        background-position: center;
+}
 
+.visible {
+	display: block !important;
+}
+
+.hidden {
+	display: none !important;
+}
 
