fix web_style 1 floating toc position

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -1601,3 +1601,10 @@ body.toc_embeded p#title {
 	display: none !important;
 }
 
+#floatingtoc .toc {
+	max-width: 40em !important;
+	left: 50% !important;
+	margin-left: -10em !important;
+	position: absolute !important;
+}
+
