fix manifest and index page format

--- a/publican/web/menu.css
+++ b/publican/web/menu.css
@@ -46,7 +46,8 @@ body > div.preface,
 body > div.chapter,
 body > div.section,
 body > div.appendix,
-body > div.part {
+body > div.part,
+body > div.index {
     margin-left: auto;
     margin-right: auto;
     max-width: 45em;
