add print.css to generic web site fix table layout in stand alon css

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -949,6 +949,8 @@ table {
 	border: 1px solid #444;
 	width:100%;
 	border-collapse:collapse;
+	table-layout: fixed;
+	word-wrap: break-word;
 }
 
 table.blockquote,
