switch to overpass for some PDF stuff.  BZ #874344

--- a/publican/datadir/Common_Content/common/en-US/css/pdf.css
+++ b/publican/datadir/Common_Content/common/en-US/css/pdf.css
@@ -1,4 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic&subset=latin,vietnamese,cyrillic,cyrillic-ext,greek,latin-ext,greek-ext);
 @import url("common.css");
 @import url("overrides.css");
 @import url("lang.css");
@@ -15,7 +14,7 @@ body.cover {
 /*	margin-left: 10em;
 	margin-right: 10em;
 */	padding: 0px;
-	font-family: "open sans", sans-serif;
+	font-family: "overpass", sans-serif;
 	font-weight:300;
 }
 
