--- a/publican/book_templates/cover.tmpl
+++ b/publican/book_templates/cover.tmpl
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="Common_Content/css/pdf.css" type="text/css" />
 </head>
 <body class="cover">
+    <div class="[%- IF draft -%] draft[%- END -%]">
 	<div class="logo"></div>
 	<div class="leader">
 		<div class="product">[%- product -%]</div>
@@ -18,6 +19,7 @@
 		<div class="author">[%- author -%]</div>
 	[%- END -%]
 	</div>
+    <div>
 </body>
 
 </html>
