--- a/publican/datadir/Common_Content/common/en-US/css/pdf.css
+++ b/publican/datadir/Common_Content/common/en-US/css/pdf.css
@@ -1,3 +1,4 @@
+
 @import url("common.css");
 @import url("overrides.css");
 @import url("lang.css");
@@ -18,7 +19,12 @@ body.cover {
 	font-weight:300;
 }
 
+body.cover > div {
+    height: 100%;
+}
+
 body.cover * {
+	text-align: left;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -69,9 +75,64 @@ body.cover div.authors {
 body.cover div.author {
 	float: left;
 	min-width: 33%;
-	margin-left
 	font-weight: 300;
 	font-size: 20px;
 }
 
+div.draft {
+	background-image: url(../images/watermark-draft.png);
+	background-repeat: repeat-y;
+        background-position: center;	
+}
+
+body.titlepages {
+	text-align: left;
+}
+
+body.titlepages > div {
+    height: 100%;
+}
+body.titlepages .legalnotice {
+	page-break-before: always;
+}
+
+body.titlepages .title {
+	font-size: 20px;
+	color: black;
+	font-weight: normal;
+	margin-bottom: 0.1em;
+}
+
+body.titlepages .subtitle {
+	color: black;
+	font-weight: normal;
+	text-align: left;
+	font-size: 12px;
+	margin-top: 0.1em;
+	margin-bottom: 2em;
+}
+
+body.titlepages .contributor {
+	margin-bottom: 1em;
+	font-size: 12px;
+}
+
+body.titlepages .abstract {
+	page-break-before: avoid !important;
+	font-size: 14px;
+}
+
+body.titlepages h1 {
+	color: black;
+	font-size: 14px;
+	font-weight: normal;
+}
+
+body.titlepages .editors h1,
+body.titlepages .othercredit h1,
+body.titlepages .legalnotice h1,
+body.titlepages .keywords h1,
+body.titlepages .abstract h1 {
+	font-weight: bold;
+}
 
