Fix web site CSS for admonitions. BZ #908539

--- a/publican/datadir/Common_Content/common/en-US/css/menu.css
+++ b/publican/datadir/Common_Content/common/en-US/css/menu.css
@@ -859,6 +859,7 @@ div.warning, div.note, div.important {
 	page-break-inside: avoid;
 }
 
+div.warning h2, div.note h2,div.important h2,
 div.admonition_header p {
 	margin: 0px;
 	padding: 0px;
