--- a/publican/datadir/Common_Content/common/en-US/css/menu.css
+++ b/publican/datadir/Common_Content/common/en-US/css/menu.css
@@ -1179,8 +1179,17 @@ sup {
 
 .footnote sup  {
 	color:#e3dcc0;
-	position:absolute;
 	left: .4em;
+}
+
+.footnote .para sup  {
+	position:absolute;
+}
+
+a.footnote {
+	padding-right: 0.5em;
+	text-decoration:none;
+	border: none;
 }
 
 .footnote sup a:link, 
