Fix using edition for version on cover pages. BZ #912180 Fix nested entities causing XML::TreeBuilder to fail. BZ #912187

--- a/publican/book_templates/cover.tmpl
+++ b/publican/book_templates/cover.tmpl
@@ -10,7 +10,7 @@
 	<div class="logo"></div>
 	<div class="leader">
 		<div class="product">[%- product -%]</div>
-		<div class="edition">[%- edition -%]</div>
+		<div class="version">[%- version -%]</div>
 	</div>
 	<div class="docname">[%- docname -%]</div>
 	<div class="subtitle">[%- subtitle -%]</div>
