--- a/publican/book_templates/titlepage.tmpl
+++ b/publican/book_templates/titlepage.tmpl
@@ -13,7 +13,7 @@ containing product, version, title, subtitle and all author/editor/translator/ot
 <body class="titlepages">
     <div class="[%- IF draft -%] draft[%- END -%]">
 	<div class="title">
-		<span class="product">[%- product -%]</span> <span class="version">[%- version -%]</span> <span class="docname">[%- docname -%]</span>
+		<span class="product">[%- product -%]</span> <span class="edition">[%- edition -%]</span> <span class="docname">[%- docname -%]</span>
 	</div>
 	<div class="subtitle">[%- subtitle -%]</div>
 	<div class="authors">
@@ -82,7 +82,7 @@ containing product, version, title, subtitle and all author/editor/translator/ot
 		<h1>[%- keywordtitle -%]</h1>
 		<div>
 			[%- FOREACH keyword = keywords -%]<span class="keyword">[% loop.count %]. [%- keyword -%]. </span>[%- END %]
-		</div 
+		</div>
 	</div>
 	[%- END -%]
 	[%- IF abstract -%]
@@ -93,7 +93,7 @@ containing product, version, title, subtitle and all author/editor/translator/ot
 		</div>
 	</div>
 	[%- END -%]
-    <div>
+    </div>
 </body>
 
 </html>
